--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<title>kakudo.app</title>
 </head>
@@ -14,7 +14,9 @@
 		</div>
 	</div>
 	<div id="main">
-		<div></div>
+		<div>
+			<a href="/blog/">Blog</a>
+		</div>
 	</div>
 </body>
 </html>
