--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 	<title>kakudo.app</title>
 </head>
 <body>
 	<div id="header">
 		<div>
-			<h1>kakudo.app</h1>
+			<img src="./kakudo-app.svg" alt="kakudo.app">
 		</div>
 	</div>
 	<div id="main">
 		<div>
-			<a href="/blog/">Blog</a>
+			<a href="./blog/">blog</a>
 		</div>
 	</div>
 </body>
