--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 	<link rel="stylesheet" href="./style.css">
+	<link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 	<title>kakudo.app</title>
 </head>
 <body>
