design change & favicon fix

--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 	<link rel="stylesheet" href="./style.css">
-	<link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+	<link rel="icon" href="./favicon.png" sizes="192x192" type="image/png">
+	<link rel="apple-touch-icon" href="./apple-touch-icon.png" sizes="152x152">
 	<title>kakudo.app</title>
 </head>
 <body>
 	<div id="header">
-		<div>
-			<img src="./kakudo-app.svg" alt="kakudo.app">
-		</div>
+		<img src="./kakudo-app.svg" alt="kakudo.app">
 	</div>
 	<div id="main">
-		<div>
-			<a href="./blog/">blog</a>
-		</div>
+		<a href="./blog/" style="color: #FFFE; background: #000D;">blog</a>
 	</div>
 </body>
 </html>
