--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<img src="./kakudo-app.svg" alt="kakudo.app">
 	</div>
 	<div id="main">
-		<a href="./blog/" style="color: #FFFE; background: #000D;">blog</a>
+		<a href="./blog/" style="color: #FFFE; background: #000D">blog</a>
+		<a href="./me/" style="color: #FFFE; background: #04CD">about me</a>
 	</div>
 </body>
 </html>
