--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</div>
 	<div id="main">
 		<a href="./blog/" style="color: #FFFE; background: #000D">blog</a>
+		<a href="./manense/" style="color: #FFFE; background: #FBC02D">manense</a>
 		<a href="./me/" style="color: #FFFE; background: #04CD">about me</a>
 	</div>
 </body>
