--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="icon" href="./favicon.png" sizes="192x192" type="image/png">
-  <link rel="apple-touch-icon" href="./apple-touch-icon.png" sizes="152x152">
   <title>kakudo.app</title>
+  <link rel="stylesheet" href="https://kakudo415.github.io/null.css/2.3.css">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <div id="header">
-    <img src="./kakudo-app.svg" alt="kakudo.app">
-  </div>
-  <div id="main">
-    <a href="./blog/" style="color: #FFFE; background: #000D">blog</a>
-    <a href="./manense/" style="color: #FFFE; background: #FBC02D">manense</a>
-    <a href="./webchat/" style="color: #000E; background: #C2EA7E">web chat</a>
-    <a href="./me/" style="color: #FFFE; background: #04CD">about me</a>
-  </div>
+  <header>
+    <div>
+      <h1>kakudo.app</h1>
+    </div>
+  </header>
+  <main>
+    <h2>Apps</h2>
+    <div>
+      <a href="manense">
+        <img src="manense.svg" alt="manense icon">
+        <h3>manense</h3>
+        <div>おこづかい管理アプリ</div>
+      </a>
+      <a href="webchat">
+        <h3>webchat</h3>
+        <div>リアルタイムで書き込みが共有される掲示板的なもの (Study product)</div>
+      </a>
+      <a href="blog">
+        <h3>blog</h3>
+        <div>Kakudoの主に技術ブログ(CMSも自作)</div>
+      </a>
+    </div>
+    <h2>Other</h2>
+    <div>
+      <a href="me">
+        <img src="icon8r.svg" alt="my portfolio icon">
+        <h3>About me</h3>
+        <div>Kakudoのポートフォリオ</div>
+      </a>
+    </div>
+  </main>
 </body>
 </html>
