--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
   <main>
     <h2>Apps</h2>
     <div>
-      <a href="manense">
+      <a href="/manense/">
         <img src="manense.svg" alt="manense icon">
         <h3>manense</h3>
         <div>おこづかい管理アプリ</div>
       </a>
-      <a href="webchat">
+      <a href="/webchat/">
         <h3>webchat</h3>
         <div>リアルタイムで書き込みが共有される掲示板的なもの (Study product)</div>
       </a>
-      <a href="blog">
+      <a href="/blog/">
         <h3>blog</h3>
         <div>Kakudoの主に技術ブログ(CMSも自作)</div>
       </a>
     </div>
     <h2>Other</h2>
     <div>
-      <a href="me">
+      <a href="/me/">
         <img src="icon8r.svg" alt="my portfolio icon">
         <h3>About me</h3>
         <div>Kakudoのポートフォリオ</div>
