--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </a>
       <a href="/webchat/">
         <h3>webchat</h3>
-        <div>リアルタイムで書き込みが共有される掲示板的なもの (Study product)</div>
+        <div>リアルタイムで書き込みが共有される掲示板的なもの (WebSocketの勉強用のプロダクト)</div>
       </a>
       <a href="/blog/">
         <h3>blog</h3>
         <div>Kakudoの主に技術ブログ(CMSも自作)</div>
       </a>
     </div>
-    <h2>Other</h2>
+    <h2>Others</h2>
     <div>
       <a href="/me/">
         <img src="icon8r.svg" alt="my portfolio icon">
