--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <main>
     <h2>Apps</h2>
     <div>
+      <a href="/kishow/">
+        <img src="API_blue.svg" alt="API icon">
+        <h3>kishow</h3>
+        <div>気象庁から得た気象情報を提供するAPI(XMLをJSONに変換しています)</div>
+      </a>
       <a href="/manense/">
         <img src="manense.svg" alt="manense icon">
         <h3>manense</h3>
