--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head prefix="og: http://ogp.me/ns#">
   <meta charset="UTF-8">
   <title>kakudo.app</title>
   <link rel="stylesheet" href="https://kakudo415.github.io/null.css/2.3.css">
@@ -8,6 +8,17 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="icon8r64px.png" type="image/png">
+  <!-- OGP -->
+  <meta property="og:title" content="kakudo.app">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kakudo.app/">
+  <meta property="og:description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
+  <meta property="og:image:url" content="http://kakudo.app/icon8.png">
+  <meta property="og:image:secure_url" content="https://kakudo.app/icon8.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:height" content="1200">
+  <meta property="og:image:width" content="1200">
+  <!-- OGP END -->
 </head>
 <body>
   <header>
