--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head prefix="og: http://ogp.me/ns#">
   <meta charset="UTF-8">
-  <title>kakudo.app</title>
+  <!-- Resource -->
   <link rel="stylesheet" href="https://kakudo415.github.io/null.css/2.3.css">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="icon8r64px.png" type="image/png">
+  <!-- Resource END -->
+  <title>kakudo.app</title>
+  <meta name="description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
   <!-- OGP -->
   <meta property="og:title" content="kakudo.app">
   <meta property="og:type" content="website">
@@ -19,6 +21,7 @@
   <meta property="og:image:height" content="1200">
   <meta property="og:image:width" content="1200">
   <!-- OGP END -->
+  <link rel="icon" href="icon8r64px.png" type="image/png">
 </head>
 <body>
   <header>
