--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>kakudo.app</title>
   <meta name="description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
   <!-- OGP -->
-  <meta property="og:title" content="kakudo.app">
-  <meta property="og:type" content="website">
   <meta property="og:url" content="https://kakudo.app/">
+  <meta property="og:site_name" content="kakudo.app">
+  <meta property="og:title" content="Apps & Works made by Kakudo.">
   <meta property="og:description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
   <meta property="og:image:url" content="http://kakudo.app/icon8.png">
   <meta property="og:image:secure_url" content="https://kakudo.app/icon8.png">
