--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:height" content="1200">
   <meta property="og:image:width" content="1200">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@kakudo415">
   <!-- OGP END -->
   <link rel="icon" href="icon8r64px.png" type="image/png">
 </head>
