op:image (op:image:url は既にあったが念のため)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta property="og:site_name" content="kakudo.app">
   <meta property="og:title" content="Apps & Works made by Kakudo.">
   <meta property="og:description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
+  <meta property="og:image" content="https://kakudo.app/icon8.png">
   <meta property="og:image:url" content="http://kakudo.app/icon8.png">
   <meta property="og:image:secure_url" content="https://kakudo.app/icon8.png">
   <meta property="og:image:type" content="image/png">
