style change (portfolioと同じデザイン)

--- a/index.html
+++ b/index.html
@@ -33,26 +33,34 @@
     </div>
   </header>
   <main>
-    <h2>Apps</h2>
     <div>
-      <a href="/kishow/">
-        <img src="API_blue.svg" alt="API icon">
-        <h3>kishow</h3>
-        <div>気象庁から得た気象情報を提供するAPI(XMLをJSONに変換しています)</div>
-      </a>
-      <a href="/manense/">
-        <img src="manense.svg" alt="manense icon">
-        <h3>manense</h3>
-        <div>おこづかい管理アプリ</div>
-      </a>
-    </div>
-    <h2>Others</h2>
-    <div>
-      <a href="/me/">
-        <img src="icon8r.svg" alt="my portfolio icon">
-        <h3>About me</h3>
-        <div>Kakudoのポートフォリオ</div>
-      </a>
+      <!-- Apps -->
+      <div>
+        <h2>Apps</h2>
+      </div>
+      <div>
+        <a href="/manense/">
+          <img src="manense.svg" alt="manense icon">
+          <h3>manense</h3>
+          <p>おこづかい管理アプリ</p>
+        </a>
+        <a href="/kishow/">
+          <img src="API_blue.svg" alt="API icon">
+          <h3>kishow</h3>
+          <p>気象庁から得た気象情報を提供するAPI(XMLをJSONに変換しています)</p>
+        </a>
+      </div>
+      <!-- Pages -->
+      <div>
+        <h2>Pages</h2>
+      </div>
+      <div>
+        <a href="/me/">
+          <img src="icon8r.svg" alt="my portfolio icon">
+          <h3>About me</h3>
+          <p>Kakudoのポートフォリオ</p>
+        </a>
+      </div>
     </div>
   </main>
 </body>
