タッチ端末でもhoverが効くように

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- OGP END -->
   <link rel="icon" href="icon8r64px.png" type="image/png">
 </head>
-<body>
+<body ontouchstart="">
   <header>
     <div>
       <h1>kakudo.app</h1>
