--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>kakudo.app</title>
   <meta name="description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
   <!-- OGP -->
+  <meta property="og:type" content="profile">
   <meta property="og:url" content="https://kakudo.app/">
   <meta property="og:site_name" content="kakudo.app">
   <meta property="og:title" content="Apps & Works made by Kakudo.">
