--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
   <meta name="twitter:site" content="@kakudo415">
   <!-- OGP END -->
   <link rel="icon" href="icon8r64px.png" type="image/png">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117381833-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-117381833-3');
+  </script>
 </head>
 <body ontouchstart="">
   <header>
