--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117381833-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
     gtag('config', 'UA-117381833-3');
   </script>
@@ -55,8 +58,18 @@
         </a>
         <a href="/kishow/">
           <img src="API_blue.svg" alt="API icon">
-          <h3>kishow</h3>
+          <h3>Kishow</h3>
           <p>気象庁から得た気象情報を提供するAPI(XMLをJSONに変換しています)</p>
+        </a>
+      </div>
+      <!-- Documents -->
+      <div>
+        <h2>Documents</h2>
+      </div>
+      <div>
+        <a href="/kishow-doc/">
+          <h3>About Kishow API</h3>
+          <p>Kishow APIについての解説です</p>
         </a>
       </div>
       <!-- Pages -->
