--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
   <meta property="og:site_name" content="kakudo.app">
   <meta property="og:title" content="Apps & Works made by Kakudo.">
   <meta property="og:description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
-  <meta property="og:image" content="https://kakudo.app/icon8.png">
-  <meta property="og:image:url" content="http://kakudo.app/icon8.png">
-  <meta property="og:image:secure_url" content="https://kakudo.app/icon8.png">
+  <meta property="og:image" content="https://kakudo.app/image/icon8.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:height" content="1200">
   <meta property="og:image:width" content="1200">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@kakudo415">
   <!-- OGP END -->
-  <link rel="icon" href="icon8r64px.png" type="image/png">
+  <link rel="icon" href="./favicon.png" type="image/png">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117381833-3"></script>
   <script>
@@ -49,12 +47,12 @@
       </div>
       <div>
         <a href="/manense/">
-          <img src="manense.svg" alt="manense icon">
+          <img src="./image/manense.svg" alt="manense icon">
           <h3>manense</h3>
           <p>おこづかい管理アプリ</p>
         </a>
         <a href="/kishow/">
-          <img src="API_blue.svg" alt="API icon">
+          <img src="./image/API_blue.svg" alt="API icon">
           <h3>kishow</h3>
           <p>気象庁から得た気象情報を提供するAPI(XMLをJSONに変換しています)</p>
         </a>
@@ -65,7 +63,7 @@
       </div>
       <div>
         <a href="/me/">
-          <img src="icon8r.svg" alt="my portfolio icon">
+          <img src="./image/icon8r.svg" alt="my portfolio icon">
           <h3>About me</h3>
           <p>Kakudoのポートフォリオ</p>
         </a>
