--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:type" content="profile">
   <meta property="og:url" content="https://kakudo.app/">
   <meta property="og:site_name" content="kakudo.app">
-  <meta property="og:title" content="Apps & Works made by Kakudo.">
-  <meta property="og:description" content="KakudoのWebサイト。開発したWebアプリ等をまとめています。">
+  <meta property="og:title" content="Apps made by Kakudo.">
+  <meta property="og:description" content="KakudoのWebアプリ">
   <meta property="og:image" content="https://kakudo.app/image/icon8.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:height" content="1200">
@@ -68,17 +68,6 @@
         <a href="/kishow-doc/">
           <h3>About Kishow API</h3>
           <p>Kishow APIについての解説です</p>
-        </a>
-      </div>
-      <!-- Pages -->
-      <div>
-        <h2>Pages</h2>
-      </div>
-      <div>
-        <a href="/me/">
-          <img src="./image/icon8r.svg" alt="my portfolio icon">
-          <h3>About me</h3>
-          <p>Kakudoのポートフォリオ</p>
         </a>
       </div>
     </div>
