--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
           <h3>About Kishow API</h3>
           <p>Kishow APIについての解説です</p>
         </a>
+        <a href="/kishow-links/">
+          <h3>Kishow API JSON Links</h3>
+          <p>現在のKishow API JSONデータへのリンクです</p>
+        </a>
       </div>
     </div>
   </main>
