--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <h2>Apps</h2>
       </div>
       <div>
+        <a href="/kobushi/">
+          <img src="./image/kobushi.svg" alt="KoBuShi icon">
+          <h3>KoBuShi</h3>
+          <p>素人になって質問できる匿名コミュニティ</p>
+        </a>
         <a href="/manense/">
           <img src="./image/manense.svg" alt="manense icon">
           <h3>manense</h3>
