--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:site_name" content="kakudo.app">
   <meta property="og:title" content="Apps made by Kakudo.">
   <meta property="og:description" content="KakudoのWebアプリ">
-  <meta property="og:image" content="https://kakudo.app/image/icon8.png">
+  <meta property="og:image" content="https://kakudo.app/image/icon.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:height" content="1200">
   <meta property="og:image:width" content="1200">
