add header icon

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <body ontouchstart="">
   <header>
     <div>
+      <img src="./image/icon_square.svg" alt="icon">
       <h1>kakudo.app</h1>
     </div>
   </header>
